# political-statement-evaluator

./: README.md  install.sh  pyproject.toml
data/: cafe-kockelmann-cafe-kockelmann_21-2025-02-28.srt  cafe-kockelmann-cafe-kockelmann_21-2025-02-28.vtt  example-output.txt
examples/: simple_usage.py
political_analysis_sdk/: __init__.py  cli.py  config.py  core.py  models.py  prompts.py
political_analysis_sdk/utils/: __init__.py  srt_to_text.py
tests/: test_political_analysis.py
whisper_diarization_sdk/: __init__.py  config.py  core.py  models.py
